--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
   font-size: 1rem;
   line-height: 1.5rem;
   overflow-x: hidden;
-  max-width: 80rem;
+  max-width: 1000px;
   margin-inline: auto;
 }
 
